v1.1.0 - fixed overlapping events, changed 2nd display, etc.
Improved battery level display.
Fixed bug in textual display of step count.
Correctly calculate overlapping events and handle them better.
Only fetch calendar data after settings info has initialized.
Change 2nd screen to display more useful information on next event and
stats.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,7 +1,7 @@
 .defaultText {
   font-size: 32;
   font-family: Fabrikat-Black;
-  font-weight: bold;
+  font-weight: regular;
   text-length: 32;
 }
 
